fix: Minor alignment issue

--- a/frontend/packages/console-shared/src/components/dashboard/dashboard.scss
+++ b/frontend/packages/console-shared/src/components/dashboard/dashboard.scss
@@ -2,7 +2,10 @@
 
 .co-dashboard-body {
   background-color: $pf-color-black-200;
-  padding: 1rem;
+  padding: 12px;
+  @media (min-width: 768px) {
+    padding: var(--pf-global--spacer--lg);
+  }
 }
 
 .co-dashboard-grid {
